# Diffusion-Image-Collage

./: .gitignore  README.md  batch_icas_to_control.py  clean_silhouettes.py  dynamic_collage_api.json  generate_control_maps.py  generate_dummy_masks.py  icas_auto_render.py  image_to_mask.py  images_to_video.py  ipadapter2.json  ipadapter3.json  main.py  pyproject.toml  requirements.txt  sas_optimization.py  send_comfyui.py  shape_decomposition.py  test_cuda.py  video_to_silhouettes.py
output_dir/baby/: slicing_result.json
src/: config.py
src/diffusion/workflow/: image_collage_basic.json  ipadapter.json  vid2vid.json
src/icas/: collage_assembly.py  dynamic_sas_generator.py  fast_batch_collage_renderer.py  fast_image_collage.py  sas_optimization.py  shape_decomposition.py
src/non_diffusion/: batch_icas_to_control.py  image_to_mask.py  images_to_video.py  main.py  main_sequence.py  video_to_silhouettes.py
src/utils/: batch_icas_tool.py  generate_control_maps.py  image_to_mask.py  images_to_video.py
temp/: final_cut.json  slicing_result.json
