[project]
name = "colla"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "descartes>=1.1.0",
    "matplotlib>=3.9.4",
    "onnxruntime-gpu>=1.20.2",
    "opencv-python>=4.13.0.92",
    "ortools>=9.15.6755",
    "pandas>=2.3.3",
    "rembg>=2.0.61",
    "scikit-image>=0.24.0",
    "seam-carving>=1.1.0",
    "shapely>=2.0.7",
]
